@@ -172,6 +172,7 @@ Dec ?? 2009 [Ypsiliform]
     * "reset game" [James]
     * Inventory manipulation commands: "item in slot", "set item in
       slot", "item count in slot", "set item count in slot" [James]
+    * "update level up learning" [James]
     * hspeak now automatically stores a backup copy of your script
       inside the .hs file. Use the -n command line option if you
       want to disable this feature [James]
